2010-02-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Presume availability of `memcmp', `memcpy', `memmove'.

	* rcsedit.c (movelines): Move #define to top-level out of
	"#if has_memmove" block, deleting the #else /*!has_memmove */ block.
	* rcsutil.c [!has_memcmp] (memcmp): Delete func.
	[!has_memcpy] (memcpy): Likewise.
	* conf.sh: Remove checks for `memcmp', `memcpy', `memmove'.

2010-02-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move check for system headers into configure.in.

	* conf.sh: Arrange to #include unconditionally <sys/types.h>,
	<sys/stat.h>, <stdlib.h>, <string.h>.  Convert checks for
	system headers from compiler-based to grep auto-sussed.h.
	Likewise for <sys/param.h>; re-#define/use HAVE_SYS_PARAM_H.
	Remove handling for <errno.h> that doesn't declare `errno'.

2010-02-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] To return from `main', use `return' directly.

	* ci.c (main): Use `return', not `exitmain'.
	* co.c (main): Likewise.
	* ident.c (main): Likewise.
	* merge.c (main): Likewise.
	* rcs.c (main): Likewise.
	* rcsclean.c (main): Likewise.
	* rcsdiff.c (main): Likewise.
	* rcskeep.c (main): Likewise.
	* rcslex.c (main): Likewise.
	* rcsmerge.c (main): Likewise.
	* rcsrev.c (main): Likewise.
	* rcssyn.c (main): Likewise.
	* rlog.c (main): Likewise.
	* conf.sh: Remove section probing validity of
	`return' from `main'.  Also, do s/exitmain/return/g.

2010-02-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add braces to disambiguate `else' clause.

	* ci.c (removelock): Add braces to disambiguate `else'.
	* ident.c (main): Likewise.
	* rcs.c (dolocks, setlock, rcs_setstate): Likewise.
	* rcsdiff.c (main) [DIFF_L]: Likewise.
	* rcsedit.c (keyreplace, addlock, addsymbol, dorewrite): Likewise.
	* rcsgen.c (getsstdin): Likewise.
	* rcsrev.c (fexpandsym): Likewise.
	* rlog.c (putadelta): Likewise.

2010-02-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Presume availability of <stdarg.h>.
